<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RecordDetailActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:layout_width="200dp"
        android:id="@+id/recordProfileIv"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_person_black"
        app:c_border="true"
        app:c_border_width="1dp"
        app:c_border_color="@color/colorGray"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:gravity="top"
                android:id="@+id/bioTv"
                android:text="The bio info"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:padding="10dp"
                tools:ignore="RtlCompat" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Name"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="User Name"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/phone"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/phoneTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/user_phone"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/email"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/user_email"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/dob"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dobTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/user_dob"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date_added"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/addedDateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/time_of_added_date"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>


        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/date_updated"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/updatedDateTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/time_of_updated_date"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
</ScrollView>